--- a/Contact.html
+++ b/Contact.html
@@ -50,7 +50,7 @@
      </div>
      <div class="contactType" id="facebook">
        <div id="boxFacebook">
-       <img src="images/Icon/FacebookIcon.png" alt="Instagram">
+       <img src="images/Icon/facebookIcon.png" alt="Facebook">
        </div>
        <h4>Facebook</h4>
        <p><a href="http://www.facebook.com" target="_blank">Follow us</a></p>
